--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   db:
@@ -11,6 +10,8 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro 
 
   db2:
     image: postgres:latest
@@ -22,6 +23,8 @@ services:
       - "5433:5432" 
     volumes:
       - postgres_data2:/var/lib/postgresql/data
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro 
 
   web:
     restart: always
@@ -31,6 +34,9 @@ services:
       - "5000:5000"
     environment:
       DATABASE_URL: postgresql://myuser:mypassword@db:5432/mydatabase
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro  
     depends_on:
       - db
 
@@ -42,17 +48,34 @@ services:
       - "5001:5001"
     environment:
       DATABASE_URL2: postgresql://myuser2:mypassword2@db2:5432/productos 
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro 
     depends_on:
       - db2
 
   web3:
     restart: always
     build: 
-      context: ./auth
+      context: ./web
     ports:
       - "5002:5002"
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro 
     depends_on:
       - web
+
+  web4:
+    restart: always
+    build: 
+      context: ./auth
+    ports:
+      - "5003:5003"
+    volumes:
+    - /etc/localtime:/etc/localtime:ro
+    - /etc/timezone:/etc/timezone:ro  
+
 
 
 volumes:
